src/index.css
@import url('https://use.typekit.net/ssa1qac.css');

html {
  scroll-behavior: smooth;
}

#root {
  max-width: 100vw;
}

body {
  margin: 0;
  padding: 0;
  font-family: sans-serif;
  box-sizing: border-box;
  max-width: 100vw;
}

.header-bar,
.header-bar-logged,
.header-bar-play {
  background: #ffb201;
  border-bottom: 1px solid black;
  position: fixed;
  width: 100%;
  top: 0px;
  z-index: 3;
  max-width: 100vw;
  max-height: 120px;
  min-height: 90px;
}

.header-bar-play {
  background: rgb(78, 135, 161);
}

h1 {
  padding-left: 20px;
  font-family: ff-prater-block-web, sans-serif;
  font-weight: 400;
  font-size: 30px;
  font-style: normal;
}

.logo {
  width: 50%;
}
.navigation-bar-nav {
  width: 50%;
  height: 100%;
  vertical-align: middle;
}
.navigation-bar {
  height: 100%;
  width: 100%;
  display: flex;
  flex-direction: row;
  align-content: center;
  align-items: center;
  box-sizing: border-box;
}

.navigation-bar h1,
.navigation-bar-nav li {
  display: inline-block;
}

.navigation-bar-nav li {
  margin-right: 30px;
  vertical-align: middle;
}

.navLinks {
  text-align: right;
  vertical-align: middle;
}

.navigation-bar h1 a {
  color: rgb(21, 0, 27);
}

.navLinks a {
  color: #58513f;
  text-decoration: none;
  padding: 10px;
}
.navLinks a:hover {
  color: rgb(255, 250, 250);
  text-decoration: none;
}

.header-bar-play .navLinks a {
  color: rgb(0, 0, 0);
  text-decoration: none;
  padding: 10px;
}

.header-bar-play .navLinks a:hover {
  color: rgb(255, 255, 255);
  text-decoration: none;
}

.header-bar-play h1 a {
  color: rgb(0, 0, 0);
}

#home h2 {
  text-align: center;
  padding-top: 80px;
}

#home p {
  text-align: justify;
  padding: 80px;
}

.page-container {
  height: 90vh;
  width: 100vw;
}

.user-page {
  display: flex;
  justify-content: center;
}

.user-area {
  display: block;
  width: 99vw;
  border: solid rgb(226, 226, 226) 1px;
}

footer {
  height: 50px;
  text-align: center;
  background: lightslategray;
  padding: 18px;
}

div {
  height: 80px;
}

footer a {
  padding: 2px;
}

@media only screen and (max-width: 575px) {
  #login,
  #register {
    all: unset;
  }

  .no-show h3 {
    display: none;
  }

  .navLinks li {
    font-size: 16px;
  }

  .user-page {
    flex-direction: column;
    margin-top: 20%;
  }

  .user-area {
    display: block;
    width: 99vw;
    border: none;
    margin-bottom: 50px;
  }

  .navigation-bar h1 {
    font-size: 26px;
  }

  .navigation-bar {
    margin-top: 6px;
  }
}

@media only screen and (max-width: 500px) {
  .navLinks li {
    font-size: 15px;
    margin-right: 10px;
  }

  .navigation-bar h1 {
    font-size: 24px;
  }
}

@media only screen and (max-width: 450px) {
  .navLinks li {
    font-size: 12px;
    margin-right: 10px;
  }

  .navLinks {
    right: 0;
  }

  .navigation-bar h1 {
    font-size: 20px;
    margin-left: 10px;
  }
}

@media only screen and (min-width: 1000px) {
  .navLinks li {
    font-size: 22px;
    margin-right: 10px;
  }

  .navLinks {
    right: 10;
  }

  .navigation-bar h1 {
    font-size: 40px;
    margin-left: 30px;
  }
}

@media only screen and (min-width: 575px) {
  .navigation-bar h1 {
    font-size: 40px;
    margin-left: 30px;
  }
}

